--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.0/dist/tailwind.min.css">
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.js" defer></script>
+
+  <!-- Bootstrap core CSS -->
+  <link href="https://startbootstrap.github.io/startbootstrap-heroic-features/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="https://startbootstrap.github.io/startbootstrap-heroic-features/css/heroic-features.css" rel="stylesheet">
+
 </head>
+
 <body>
-    <nav class="flex flex-row bg-gray-800 h-16 text-white">
-        <!-- Brand/logo -->
-        <a class="text-2xl px-4 py-4" href="/">Flashdeal Hunter</a>
 
-        <!-- Links -->
-        <ul class="px-5 py-5">
-            <li>
-            <a class="text-xl text-gray-400" href="/jdid">JD.id</a>
-            </li>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="/">Flash Deal Hunter</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="/jdid">JD.id</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bukalapak">Bukalapak</a>
+          </li>
+
         </ul>
+      </div>
+    </div>
+  </nav>
 
-    </nav>
+  <!-- Page Content -->
+  <div class="container" style="min-height:500px">
 
-<div class="container mx-auto mt-4">
-  {% block body %}
+    {% block body %}
 
-  {% endblock %}
-</div>
+    {% endblock %}
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://startbootstrap.github.io/startbootstrap-heroic-features/vendor/jquery/jquery.min.js"></script>
+  <script src="https://startbootstrap.github.io/startbootstrap-heroic-features/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
