--- a/templates/jdid.html
+++ b/templates/jdid.html
@@ -7,7 +7,11 @@
 {% block body %}
 
     <center>
-        <h3>Waktu Flashdeal <br>{{ end['startTime'] }} - {{ end['endTime'] }}</h3>
+        <h3>
+            Waktu Flash Deal
+            <br>
+            {{ end['startTime'] }} - {{ end['endTime'] }}
+        </h3>
     </center>
     <br><br>
 
