--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/bukalapak">Bukalapak</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/shopee">Shopee</a>
+          </li>
 
         </ul>
       </div>
